# keygrain

./: .gitignore  .gitlab-ci.yml  .spec-checksum  .test-baselines  .vectors-checksum  ACCEPTED_LIMITATIONS.md  AGENTS.md  API.md  BACKLOG.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANUAL_TASKS.md  README.md  ROADMAP.md  SECURITY.md  SPEC.md  VERIFY.md  WEBSITE_BACKLOG.md  project-state.md  ssh-vectors.json  sync-vectors.json  totp-vectors.json  vectors.json  wallet-vectors.json
.github/: PULL_REQUEST_TEMPLATE.md
ci/: cross-platform-check.sh  cross-platform-derive.mjs  cross-platform-derive.py  gen-sync-vectors.mjs  version-check.sh
designs/: add-service-email-default.md  algorithm-v2-brainstorm.md  algorithm-v2-spec.md  algorithm-v2-validation.md  argon2id-strengthen.md  autofill-email-password.md  autofill-etld1-matching.md  autofill-session-fix.md  backup-api.md  backup-versioning.md  breach-news-feed.md  browser-extension.md  bug-bounty-r2-fixes.md  candidate-assessment.md  card-styling-consistency.md  ci-enforcement.md  client-generated-uuid.md  commit-groups.md  context-menu.md  counter-edit.md  credential-manager-provider.md  cross-platform-integration.md  dark-light-mode.md  dark-mode.md  dialog-state-stack.md  doc-fixes-spec-limitations.md  edit-service.md  enter-key-fix.md  error-humanization.md  extension-encrypted-storage.md  extension-rewrite.md  extension-store-prep.md  feature-gap-analysis.md  fingerprint-aria-boundary-fixes.md  generator-navigation.md  github-migration-plan.md  hd-wallet-derivation.md  how-it-works-redesign.md  invisible-sync.md  js-argon2id-slow-path.md  (+49 more)
docs/: GLOSSARY.md  advanced-features.md  architecture.md  cli-and-integration.md  design-autofill-username.md  design-metadata-cache-tamper-detection.md  developer-guide.md  next-improvements.md  (+5 more)
python/: LICENSE  README.md  pyproject.toml  setup.cfg
python/keygrain/: __init__.py  _wordlist.py  bip85.py  cache.py  cli.py  derive.py  secret_input.py  selection.py  ssh.py  sync_client.py  totp.py  wallet.py
python/tests/: test_bip85.py  test_cache.py  test_cli_sync.py  test_cli_totp.py  test_derive.py  test_integration_e2e.py  test_secret_input.py  test_selection.py  test_ssh.py  test_strengthen.py  test_sync_client.py  test_sync_vectors.py  test_totp.py  test_version.py  test_wallet.py
(+166 files in other folders)
